--- a/homes/joshk/browsers/firefox/servers.html
+++ b/homes/joshk/browsers/firefox/servers.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -58,6 +57,7 @@
                         <li><a href="https://192.168.1.11:30072/" target="_blank">Unifi Controller</a></li>
                         <li><a href="http://192.168.1.11:30020/" target="_blank">NGINX Proxy Manager</a></li>
                         <li><a href="http://192.168.1.11:20720/" target="_blank">Pi-hole</a></li>
+                        <li><a href="https://192.168.1.11:31012/budget" target="_blank">Actual Budget</a></li>
                 </ul>
         </div>
 </body>
